# DataCasketShred

./: .env.example  .gitignore  DataCasketShred.spec  LICENSE  README.md  pyproject.toml
docs/: architecture.md
scripts/: bootstrap.ps1  build-exe.ps1  tasks.ps1
src/app/: main.py
src/app/archive/: __init__.py  seven_zip.py
src/app/config/: settings.py
src/app/history/: __init__.py  history_service.py  secure_delete.py
src/app/i18n/: translator.py
src/app/i18n/locales/: de.json  en.json
src/app/logging/: logger.py
src/app/state/: __init__.py  store.py
src/app/ui/: gui.py
tests/: DataCasketShred.lnk  test_smoke.py
